# memlab

./: .gitignore  README.md
agent/: go.mod  go.sum
agent/cmd/: main.go
agent/internal/client/: restful.go
agent/internal/client/models/: detectionconfig.go  host.go  process.go
agent/internal/control/: config.go  handler.go  plane.go  state.go
agent/internal/control/client/: restful.go
agent/internal/control/messages/: host.go  processes.go
agent/internal/control/responses/: processes.go
agent/internal/detection/: controller.go  errors.go  types.go
agent/internal/detection/detectors/: detector.go  signals.go  types.go
agent/internal/detection/requests/: hangs.go  request.go  signals.go  thresholds.go
agent/internal/errors/: errors.go  wrappers.go
agent/internal/host/: machineid.go
agent/internal/kernel/communication/: communicator.go  payloads.go
agent/internal/logging/: logger.go
agent/internal/operations/: pipeline.go
agent/internal/operations/operators/: metadata.go  operator.go  procdump.go
agent/internal/reports/: merger.go  report.go
agent/internal/reports/general/: host.go  processes.go
agent/internal/reports/postdetection/: metadata.go  procdump.go
agent/internal/state/: errors.go  state.go
agent/internal/types/: process.go  time.go
dashboard/backend/: requirements.txt
dashboard/backend/memlab/: manage.py
dashboard/backend/memlab/hosts/: urls.py  (+4 more)
dashboard/backend/memlab_backend/: manage.py
kernel/: CMakeLists.txt  Makefile  communication.c  communication.h  ml_crash_detector.c  ml_crash_detector.h  state.c  state.h
(+60 files in other folders)
